Edited routes, added Open Graph to index.html .

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Booking</title>
+    <meta property="og:title" content="Онлайн сервіс бронювання." />
+    <meta property="og:description" content="Онлайн сервіс для бронювання кімнат готелів та машин." />
+    <meta property="og:image" content="https://www.beerent.com/site_media/media/uploads/posts/images/Screenshot_2023-03-29_000534.png.1200x0_q92.png" />
+    <meta property=”og:url” content=”http://localhost:5173/home” />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Booking" />
+    <meta property="og:locale" content="uk_UA" />
+    <meta property=«og:image:width» content=«950» />
+    <meta property=«og:image:height» content=«350» />
   </head>
   <body>
     <div id="root"></div>
