Test og for netlify links.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="Онлайн сервіс бронювання." />
     <meta property="og:description" content="Онлайн сервіс для бронювання кімнат готелів та машин." />
     <meta property="og:image" content="https://www.beerent.com/site_media/media/uploads/posts/images/Screenshot_2023-03-29_000534.png.1200x0_q92.png" />
-    <meta property=”og:url” content=”http://localhost:5173/home” />
+    <meta property=”og:url” content=”https://booking-intership.netlify.app/home” />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Booking" />
     <meta property="og:locale" content="uk_UA" />
